<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SeriesActivity">

    <item
        android:id="@+id/series_delete"
        android:orderInCategory="300"
        android:title="@string/delete"
        android:tooltipText="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/series_mark_as_watched"
        android:orderInCategory="300"
        android:title="@string/mark_as_watched"
        android:tooltipText="@string/mark_as_watched"
        android:icon="@drawable/ic_check_all"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/series_mark_as_unwatched"
        android:orderInCategory="300"
        android:title="@string/mark_as_unwatched"
        android:tooltipText="@string/mark_as_unwatched"
        android:icon="@drawable/ic_check_all"
        app:showAsAction="never"/>
</menu>