<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SeriesInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/series_poster"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/poster_blank"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/series_poster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/episode_status"
                android:id="@+id/episode_status_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/episode_status"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/episode_network"
                android:id="@+id/episode_network_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/episode_network"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/episode_first_aired"
                android:id="@+id/episode_first_aired_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/episode_first_aired"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/episode_content_rating"
                android:id="@+id/episode_content_rating_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/episode_content_rating"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/episode_tvdb_rating"
                android:id="@+id/episode_tvdb_rating_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/episode_tvdb_rating"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/series_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

</LinearLayout>